--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <head>
     <style>
-        html{
+        html {
             -webkit-touch-callout: none;
             -webkit-user-select: none;
-            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
-        
+
         body {
             margin: 0px;
             padding: 0px;
@@ -39,9 +39,11 @@
 
 <body>
     <div class="main">
-        <img class="pc-image" src="main11.png" usemap="#image-map">
+        <a href="https://open.kakao.com/o/sgT165kg">
+            <img src="btn-katalk-m.png" style="position: fixed; right:20px; bottom :20px;width:200px" />
+            <img class="pc-image" src="main11.png" usemap="#image-map">
+        </a>
 
-    
     </div>
 
     <script src="chrome-extension://hhojmcideegachlhfgfdhailpfhgknjm/web_accessible_resources/index.js"></script>
